--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ gradio = "^5.40.0"
 python-dotenv = "^1.1.0"
 requests = "^2.31.0"
 numpy = "^1.24.0"
+supabase = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 watchdog = "^6.0.0"
