--- a/env.example
+++ b/env.example
@@ -2,6 +2,9 @@
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_KEY=your_supabase_anon_key
 
+# GitHub Configuration (optional but recommended)
+GITHUB_TOKEN=your-github-token
+
 # Server Configuration
 PORT=8000
 DEBUG=false
