externalize config parameters

--- a/env.example
+++ b/env.example
@@ -4,6 +4,35 @@ SUPABASE_KEY=your_supabase_anon_key
 
 # GitHub Configuration (optional but recommended)
 GITHUB_TOKEN=your-github-token
+GITHUB_API_URL=https://api.github.com
+GITHUB_USER_AGENT=RAGSpace/1.0
+GITHUB_FILE_TYPES=.md,.py,.js,.ts,.txt,.rst,.adoc,.json,.yaml,.yml
+GITHUB_MAX_FILE_SIZE=50000
+GITHUB_SKIP_PATTERNS=node_modules,.git,__pycache__,.DS_Store,*.pyc
+GITHUB_MAX_DEPTH=10
+GITHUB_RATE_LIMIT_WARNING=true
+
+# Website Crawler Configuration
+WEBSITE_MAX_DEPTH=3
+WEBSITE_MAX_PAGES=10
+WEBSITE_SKIP_PATTERNS=#,javascript:,mailto:,tel:,data:
+WEBSITE_CONTENT_SELECTORS=main,article,.content,#content,.post,.entry
+WEBSITE_TITLE_SELECTORS=h1,title,.title,.headline
+WEBSITE_USER_AGENT=RAGSpace/1.0
+WEBSITE_TIMEOUT=10
+WEBSITE_MAX_CONTENT_SIZE=50000
+
+# Global Crawler Configuration
+CRAWLER_ENABLE_LOGGING=true
+CRAWLER_LOG_LEVEL=INFO
+CRAWLER_DEFAULT_TIMEOUT=30
+CRAWLER_RETRY_ATTEMPTS=3
+CRAWLER_RETRY_DELAY=1
+
+# Mock Crawler Configuration (for testing)
+CRAWLER_ENABLE_MOCK=false
+CRAWLER_MOCK_DATA_PATH=
+CRAWLER_MOCK_DELAY=0.1
 
 # Server Configuration
 PORT=8000
