--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+
 # Supabase Configuration
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_KEY=your_supabase_anon_key
