--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ python-dotenv = "^1.1.0"
 requests = "^2.31.0"
 numpy = "^1.24.0"
 supabase = "^2.0.0"
+openai = "^1.99.1"
+bs4 = "^0.0.2"
 
 [tool.poetry.group.dev.dependencies]
 watchdog = "^6.0.0"
