--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-gradio = "^5.40.0"
+gradio = {version = "^5.40.0", extras = ["mcp"]}
 python-dotenv = "^1.1.0"
 requests = "^2.31.0"
 numpy = "^1.24.0"
